<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context="com.shane_taylor.Graphy.MenuPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/graphy"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:minLines="2"
                        android:text="@string/TruthTables"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/truth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_truth_table"
                        android:focusable="true"
                        android:onClick="onClickTruth"
                        android:src="@drawable/truth" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:text="Point Graph"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_point_graph"
                        android:focusable="true"
                        android:onClick="onClickPoint"
                        android:src="@drawable/points" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:text="Line Graph"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/lines"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_line_graph"
                        android:focusable="true"
                        android:onClick="onClickLine"
                        android:src="@drawable/lines" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:text="Reflexive Triangles"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/reflexive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_reflexive_graph"
                        android:focusable="true"
                        android:onClick="onClickReflexive"
                        android:src="@drawable/reflexive" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:text="SSS and SAS"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/sss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_sss"
                        android:focusable="true"
                        android:onClick="onClickSSS"
                        android:src="@drawable/sss" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:minLines="2"
                        android:text="Pythagorean Theorem"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/pythag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/description_pythag"
                        android:focusable="true"
                        android:onClick="onClickPythag"
                        android:src="@drawable/pythag" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/GrantText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/grant_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/privacyLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="5dp"
                    android:contentDescription="@string/privacy_link_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout-->
    <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:background="@drawable/gradient">-->

    <!--    &lt;!&ndash; Your app logo or header here &ndash;&gt;-->

    <!--    &lt;!&ndash; Menu items &ndash;&gt;-->
    <!--    <ImageView-->
    <!--        android:id="@+id/appLogo"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:adjustViewBounds="true"-->
    <!--        android:contentDescription="@string/graphy"-->
    <!--        android:padding="16dp"-->
    <!--        android:src="@drawable/graphy_icon_small_size_dark"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/menuItems"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <LinearLayout-->
    <!--        android:id="@+id/menuItems"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/appLogo"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/grantInfo"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:padding="16dp"-->
    <!--        >-->

    <!--        &lt;!&ndash; Menu item with compound drawable &ndash;&gt;-->
    <!--        <TextView-->
    <!--            android:id="@+id/truthTablesItem"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:clickable="true"-->
    <!--            android:drawableTop="@drawable/truth"-->
    <!--            android:gravity="center"-->
    <!--            android:onClick="onClickTruthTables"-->
    <!--            android:padding="16dp"-->
    <!--            android:text="@string/description_truth_table"-->
    <!--            android:textAppearance="@style/TextAppearance.AppCompat.Headline"-->
    <!--            android:textColor="@color/colorPrimary" />-->

    <!--        &lt;!&ndash; Add similar TextView items for other menu items &ndash;&gt;-->
    <!--        &lt;!&ndash; ... &ndash;&gt;-->

    <!--    </LinearLayout>-->

    <!--    &lt;!&ndash; Grant info and privacy link &ndash;&gt;-->
    <!--    <LinearLayout-->
    <!--        android:id="@+id/grantInfo"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/menuItems"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        android:padding="16dp"-->
    <!--        >-->

    <!--        <TextView-->
    <!--            android:id="@+id/grantText"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/grant_info"-->
    <!--            android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--            android:textColor="@color/white"-->
    <!--            />-->

    <!--        <TextView-->
    <!--            android:id="@+id/privacyLink"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/privacy_link"-->
    <!--            android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
    <!--            android:textColor="@color/white"-->
    <!--            android:clickable="true"-->
    <!--            android:onClick="openPrivacyPolicy"-->
    <!--            />-->

    <!--    </LinearLayout>-->
    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->